--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 				  	<img src="assets/acceleratorLogo/cdl.png" height="300px">
 				  <img src="assets/acceleratorLogo/next36.png" height="300px">
 				  <img src="assets/acceleratorLogo/fc.png" height="300px">
-				  <img src="assets/acceleratorLogo/cvn.png" height="300px">
+				  <!--<img src="assets/acceleratorLogo/cvn.png" height="300px">-->
 				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
 				</div>
 				<div class="logos-slide">
@@ -257,7 +257,7 @@
 				  	<img src="assets/acceleratorLogo/cdl.png" height="300px">
 				  <img src="assets/acceleratorLogo/next36.png" height="300px">
 				  <img src="assets/acceleratorLogo/fc.png" height="300px">
-				  <img src="assets/acceleratorLogo/cvn.png" height="300px">
+				  <!--<img src="assets/acceleratorLogo/cvn.png" height="300px">-->
 				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
 				</div>
 			</div>
