--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
 				<div class="logos-slide">
 					<img src="assets/acceleratorLogo/yc.png" height="300px">
 					<img src="assets/acceleratorLogo/techstars.png" height="300px">	
+					<img src="assets/expert_dojo.jpeg" height="300px">
 				  	<img src="assets/acceleratorLogo/communitech.png" height="300px">	
 				  	<img src="assets/acceleratorLogo/antler.png" height="300px">
 				  	<img src="assets/acceleratorLogo/ondeck.png" height="300px">
@@ -250,7 +251,8 @@
 				</div>
 				<div class="logos-slide">
 					<img src="assets/acceleratorLogo/yc.png" height="300px">
-					<img src="assets/acceleratorLogo/techstars.png" height="300px">	
+					<img src="assets/acceleratorLogo/techstars.png" height="300px">
+					<img src="assets/expert_dojo.jpeg" height="300px">
 				  	<img src="assets/acceleratorLogo/communitech.png" height="300px">	
 				  	<img src="assets/acceleratorLogo/antler.png" height="300px">
 				  	<img src="assets/acceleratorLogo/ondeck.png" height="300px">
