--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 	<title>Moonarch | Fund your startup</title>
 	<link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E1C0GX5CJ5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E1C0GX5CJ5');
+</script>
 <body>
 	<div class="backLine midLine" style="left: 13vw"></div>
 	<div class="backLine" style="left: 25vw"></div>
