--- a/form.html
+++ b/form.html
@@ -6,29 +6,36 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="We provide a centralized and easily accessible platform to discover and research promising early-stage companies"> <!-- Google Search Description -->
-	<!-- Bootstrap 5 -->
+	<meta http-equiv="refresh" content="0; URL=https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" />
+  <!-- Bootstrap 5 -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="index.js" defer></script>
   <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
 </head>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-E1C0GX5CJ5');
+</script>
 <body>
 
 <main>
     <div class="navform">
         <a href="./"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
-        <div class="navLinks">
-            <!-- <a href="./angel-form.html" target="_blank" class="navLink">Apply as an angel</a> -->
-            <!-- <a class="navLink">Apply as a founder</a> -->
-        </div>
     </div>
-
     <div id="startupForm">
+      <div>Redirecting to form...</div>
+    </div>
+    
+
+    <!-- <div id="startupForm">
         <div id="ss_survey_widget"></div>
         <script id="SS_SCRIPT">function sparrowLaunch(opts){var e="ss-widget",t="script",a=document,r=window,l=localStorage;var s,n,c,rm=a.getElementById('SS_SCRIPT');r.SS_WIDGET_TOKEN="tt-3itY1nnjXCaWrHAN1e7BjE";r.SS_ACCOUNT="aquilainvesting.surveysparrow.com";r.SS_SURVEY_NAME="moonarch-startup-application";if(!a.getElementById(e) && !l.getItem('removed-ss-widget-tt-3itY1nnjXCaWrHAN1e7BjE')){var S=function(){S.update(arguments)};S.args=[];S.update=function(e){S.args.push(e)};r.SparrowLauncher=S;s=a.getElementsByTagName(t);c=s[s.length-1];n=a.createElement(t);n.type="text/javascript";n.async=!0;n.id=e;n.src=["https://","aquilainvesting.surveysparrow.com/widget/",r.SS_WIDGET_TOKEN,"?","customParams=",JSON.stringify(opts)].join("");c.parentNode.insertBefore(n,c);r.SS_VARIABLES=opts;rm.parentNode.removeChild(rm);}};</script>
         <script>sparrowLaunch({/*add custom params here*/})</script>
-    </div>
+    </div> -->
 
     <!-- <div class="flexColumn footer">
         <div class="flexRow spaceBetween footerBox">
