--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
 						</div>
 						<div class="stepBox">
 							<div class="stepBoxTitle">3</div>
-							<div class="greyBoxText">Tell your story and raise your round</div>
+							<!--<div class="greyBoxText">Tell your story and raise your round</div>-->
+							<div class="greyBoxText">Connect and raise your round</div>
 						</div>
 					</div>
 				</div>
