--- a/index.html
+++ b/index.html
@@ -321,7 +321,8 @@
 						</div>
 						<div class="stepBox">
 							<div class="stepBoxTitle">1</div>
-							<div class="greyBoxText">Join today by filling out our 2 minute form</div>
+							<!--<div class="greyBoxText">Join today by filling out our 2 minute form</div>-->
+							<div class="greyBoxText">Fill out our 2 minute form and join today</div>
 						</div>
 						<div class="stepBox">
 							<div class="stepBoxTitle">2</div>
