--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
 
 <main>
     <div class="navform">
-        <a href="./"><img class="smallLogo" src="./assets/logoText-white.png" /></a>
+        <a href="./"><img class="smallLogo" src="./assets/MoonarchLogo.png" /></a>
     </div>
     <div id="startupForm">
       <div>Redirecting to form...</div>
