--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div class="feature col">
 					<div class="card-body">
 					  <h1 class="card-title pricing-card-title" style="color: #ffffff;">
-						  3,000+<span style="font-size: 25px">+</span>
+						  3,000<span style="font-size: 25px">+</span>
 					  </h1>
 					  <ul class="list-unstyled mt-3 alignL">
 						<li style="color: #ffffff">
