Completed Steps 1-5 / Pending Approval

--- a/startup.html
+++ b/startup.html
@@ -56,7 +56,7 @@
 		<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center headerPhone">
 			<div class="col-md-6 mx-auto">
 				<!-- <img src="./assets/icon/newLogoBlue.png" height="50" width="60" style="margin-bottom: 30px"/> -->
-			  <h1 class="display-3 mb-3 fw-bold phoneTitle">Meet investors for your startup</h1>
+			  <h1 class="display-3 mb-3 fw-bold phoneTitle">Your First Step Towards Startup Success</h1>
 			  <h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees taken</h4>
 			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
 				<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
@@ -133,8 +133,7 @@
 		  </div>
 	</div>
 
-
-	<div class="networkSticky">
+    <div class="networkSticky">
 		<div class="stickyBox" style="height: fit-content">
 			<!-- <h2 class="align-items-center networkSmall greyBoxTitle" style="padding-bottom: 0">
 			  Our Network
