Updated startups.html + Created accelerator.html

--- a/startups.html
+++ b/startups.html
@@ -304,7 +304,7 @@
 							NEXT STEPS
 						</h5>
 						  <h4 class="align-items-center">
-							  Fund your startup in three steps:
+							  Fund your startup in 4 steps:
 						  </h4>
 					</div>
 				</div>
@@ -315,22 +315,26 @@
 								NEXT STEPS
 							</h5>
 							  <h4 class="align-items-center">
-								  Fund your startup in three steps:
+								  Fund your startup in 4 steps:
 							  </h4>
 						</div>
 						<div class="stepBox">
 							<div class="stepBoxTitle">1</div>
 							<!--<div class="greyBoxText">Join today by filling out our 2 minute form</div>-->
-							<div class="greyBoxText">Fill out our 2 minute form and join today</div>
+							<div class="greyBoxText">Fill out the form</div>
 						</div>
 						<div class="stepBox">
 							<div class="stepBoxTitle">2</div>
-							<div class="greyBoxText">Get warm intros with top investors</div>
+							<div class="greyBoxText">Be placed in front of 60+ investors</div>
 						</div>
 						<div class="stepBox">
 							<div class="stepBoxTitle">3</div>
+							<div class="greyBoxText">Connect with interested investors</div>
+						</div>
+						<div class="stepBox">
+							<div class="stepBoxTitle">4</div>
 							<!--<div class="greyBoxText">Tell your story and raise your round</div>-->
-							<div class="greyBoxText">Connect and raise your round</div>
+							<div class="greyBoxText">Get funding</div>
 						</div>
 					</div>
 				</div>
