added buttons and about usÉ

--- a/index.html
+++ b/index.html
@@ -62,7 +62,33 @@
 				<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
 				  <button type="button" class="blueButton bigBlue">
 						<span class="blueButtonInner">
-							<span>Find investors</span>
+							<span>I'm an investor</span>
+							<span class="arrows">
+								<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
+								<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+							</span>
+						</span>
+					</button>
+				</a>
+			  </div>
+			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
+				<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
+				  <button type="button" class="blueButton bigBlue">
+						<span class="blueButtonInner">
+							<span>I'm a startup</span>
+							<span class="arrows">
+								<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
+								<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+							</span>
+						</span>
+					</button>
+				</a>
+			  </div>
+			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
+				<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
+				  <button type="button" class="blueButton bigBlue">
+						<span class="blueButtonInner">
+							<span>I'm an accelerator</span>
 							<span class="arrows">
 								<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
 								<img src="./assets/icon/arrow.png" class="arrowIcon"/>
@@ -133,12 +159,16 @@
 		  </div>
 	</div>
 
-
-	<div class="networkSticky">
+	<div class="container">
+		<div class="greyBoxTitle">About Us</div>
+		<div class="greyBoxText">The Moonarch community comprises executives from leading tech companies and startups in North America</div>
+	</div>
+	<div class="container">
+		<div class="greyBoxTitle">Updates</div>
+		<div class="greyBoxText">bunch of links?</div>
+	</div>
+	<!-- <div class="networkSticky">
 		<div class="stickyBox" style="height: fit-content">
-			<!-- <h2 class="align-items-center networkSmall greyBoxTitle" style="padding-bottom: 0">
-			  Our Network
-		  	</h2> -->
 			<div class="greyBoxTitle">Our Ecosystem</div>
 	  	</div>
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sOne" style="color: #454545;">
@@ -183,7 +213,6 @@
 				FUNDING
 			</h5>
 			<div class="greyBoxTitle">Raise up to $1M rounds</div>
-			<!-- <span class="greyBoxText">Raise money through our investors</span> -->
 			<div class="row g-4 row-cols-lg-4 statRow" style="margin-top: 10px">
 				<div class="feature col">
 					<div class="card-body">
@@ -197,19 +226,6 @@
 					  </ul>
 					</div>
 				</div>
-	
-				<!-- <div class="feature col">
-					<div class="card-body">
-					  <h1 class="card-title pricing-card-title" style="color: var(--moonBlue);">
-						  $20M
-					  </h1>
-					  <ul class="list-unstyled mt-3 alignL greyBoxText">
-						<li style="color: var(--moonBlack)">
-							raised per month
-						</li>
-					  </ul>
-					</div>
-				</div> -->
 	
 				<div class="feature col">
 					<div class="card-body">
@@ -255,7 +271,6 @@
 				  	<img src="assets/acceleratorLogo/cdl.png" height="300px">
 				  <img src="assets/acceleratorLogo/next36.png" height="300px">
 				  <img src="assets/acceleratorLogo/fc.png" height="300px">
-				  <!--<img src="assets/acceleratorLogo/cvn.png" height="300px">-->
 				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
 				</div>
 				<div class="logos-slide">
@@ -268,19 +283,11 @@
 				  	<img src="assets/acceleratorLogo/cdl.png" height="300px">
 				  <img src="assets/acceleratorLogo/next36.png" height="300px">
 				  <img src="assets/acceleratorLogo/fc.png" height="300px">
-				  <!--<img src="assets/acceleratorLogo/cvn.png" height="300px">-->
 				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
 				</div>
 			</div>
 			<span class="greyBoxText" style="font-size: 13px">*coming soon</span>
 		</div>
-		<!-- <div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sFour" style="color: #454545;">
-			<h5 class="pb-2 tabTitle" style="color:#721CFF;">
-				STAY UPDATED
-			</h5>
-			<div class="greyBoxTitle">Get frequent updates and insights on the startup world</div>
-			<span class="greyBoxText">Read a weekly newsletter.</span>
-		</div> -->
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 blueBox">
 			<div class="greyBoxTitle" style="color: white">Join our community today</div>
 			<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
@@ -321,7 +328,6 @@
 						</div>
 						<div class="stepBox">
 							<div class="stepBoxTitle">1</div>
-							<!--<div class="greyBoxText">Join today by filling out our 2 minute form</div>-->
 							<div class="greyBoxText">Fill out our 2 minute form and join today</div>
 						</div>
 						<div class="stepBox">
@@ -330,14 +336,13 @@
 						</div>
 						<div class="stepBox">
 							<div class="stepBoxTitle">3</div>
-							<!--<div class="greyBoxText">Tell your story and raise your round</div>-->
 							<div class="greyBoxText">Connect and raise your round</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-  	</div>
+  	</div> -->
 
 	<div class="container">
 		<div class="greyBoxTitle">FAQ</div>
