--- a/index.html
+++ b/index.html
@@ -52,56 +52,52 @@
 	</div>
 	<!-- d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none -->
 
-  	<div class="header">
+	<!-- Merged the three sets of buttons into a single parent container with the class "phoneMainButton". -->
+	<div class="header">
 		<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center headerPhone">
 			<div class="col-md-6 mx-auto">
-				<!-- <img src="./assets/icon/newLogoBlue.png" height="50" width="60" style="margin-bottom: 30px"/> -->
-			  <h1 class="display-3 mb-3 fw-bold phoneTitle">Meet investors for your startup</h1>
-			  <h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees taken</h4>
-			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
-				<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
-				  <button type="button" class="blueButton bigBlue">
-						<span class="blueButtonInner">
-							<span>I'm an investor</span>
-							<span class="arrows">
-								<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
-								<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+				<h1 class="display-3 mb-3 fw-bold phoneTitle">Meet investors for your startup</h1>
+				<h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees taken</h3>
+				<div class="d-flex gap-3 lead fw-normal phoneMainButton">
+					<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
+						<button type="button" class="blueButton bigBlue">
+							<span class="blueButtonInner">
+								<span>I'm an investor</span>
+								<span class="arrows">
+									<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
+									<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+								</span>
 							</span>
-						</span>
-					</button>
-				</a>
-			  </div>
-			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
-				<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
-				  <button type="button" class="blueButton bigBlue">
-						<span class="blueButtonInner">
-							<span>I'm a startup</span>
-							<span class="arrows">
-								<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
-								<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+						</button>
+					</a>
+					<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
+						<button type="button" class="blueButton bigBlue">
+							<span class="blueButtonInner">
+								<span>I'm a startup</span>
+								<span class="arrows">
+									<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
+									<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+								</span>
 							</span>
-						</span>
-					</button>
-				</a>
-			  </div>
-			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
-				<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
-				  <button type="button" class="blueButton bigBlue">
-						<span class="blueButtonInner">
-							<span>I'm an accelerator</span>
-							<span class="arrows">
-								<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
-								<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+						</button>
+					</a>
+					<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
+						<button type="button" class="blueButton bigBlue">
+							<span class="blueButtonInner">
+								<span>I'm an accelerator</span>
+								<span class="arrows">
+									<img src="./assets/icon/arrowBack.png" height="2" width="30"/>
+									<img src="./assets/icon/arrow.png" class="arrowIcon"/>
+								</span>
 							</span>
-						</span>
-					</button>
-				</a>
-			  </div>
+						</button>
+					</a>
+				</div>
 			</div>
 			<div class="product-device shadow-sm d-none d-md-block"></div>
 			<div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
 		  </div>
-	
+
 		  <div class="container px-5 py-5 text-center" id="stats">
 			<div class="row g-4 row-cols-lg-4 statRow">
 				<div class="feature col">
