--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 				<img src="./assets/MoonarchMainLogo.png" alt="Moonarch" style="width: 100%; height: 100%">
 			  </a>
 		
-			<a href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank">
-			  <button type="button" class="blueButton fixedNav" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank">
+			<a href="https://moonarch.vc/apply" target="_blank">
+			  <button type="button" class="blueButton fixedNav" href="https://moonarch.vc/apply" target="_blank">
 				<span class="blueButtonInner" style="width: 120px">
 					<span>Apply now</span>
 					<span class="arrows">
@@ -59,7 +59,7 @@
 			  <h1 class="display-3 mb-3 fw-bold phoneTitle">Meet investors for your startup</h1>
 			  <h3 class="fw-normal text-muted mb-3 phoneTitle">No cuts or fees taken</h4>
 			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
-				<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
+				<a class="icon-link" href="https://moonarch.vc/apply" target="_blank" style="color: #721CFF; text-decoration: none;">
 				  <button type="button" class="blueButton bigBlue">
 						<span class="blueButtonInner">
 							<span>Find investors</span>
@@ -283,7 +283,7 @@
 		</div> -->
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 blueBox">
 			<div class="greyBoxTitle" style="color: white">Join our community today</div>
-			<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
+			<a class="icon-link" href="https://moonarch.vc/apply" target="_blank" style="color: #721CFF; text-decoration: none;">
 			<button type="button" class="blueButton" style="width: 240px" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank">
 				<span class="blueButtonInner"style="width: 120px">
 					<span>Apply now</span>
