Changed scroll to list for logos

--- a/startups.html
+++ b/startups.html
@@ -161,7 +161,7 @@
 				  <img src="./assets//amazon.png" height="300px">
 				  <img src="./assets//hopper.png" height="300px">				
 				</div>
-				<div class="logos-slide">
+				<!-- <div class="logos-slide">
 					<img src="./assets//bcg.png" height="300px">
 				  <img src="./assets//coinbase.png" height="300px">
 				  <img src="./assets//microsoft.png" height="300px">
@@ -174,7 +174,7 @@
 				  <img src="./assets//clearco.png" height="300px">
 				  <img src="./assets//amazon.png" height="300px">
 				  <img src="./assets//hopper.png" height="300px">				
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="overflow-hidden p-3 p-md-5 m-md-3 greyBox sTwo" style="color: #454545;">
@@ -257,7 +257,7 @@
 				  <!--<img src="assets/acceleratorLogo/cvn.png" height="300px">-->
 				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
 				</div>
-				<div class="logos-slide">
+				<!-- <div class="logos-slide">
 					<img src="assets/acceleratorLogo/yc.png" height="300px">
 					<img src="assets/acceleratorLogo/techstars.png" height="300px">
 					<img src="assets/expert_dojo.jpeg" height="300px">
@@ -266,10 +266,10 @@
 				  	<img src="assets/acceleratorLogo/ondeck.png" height="300px">
 				  	<img src="assets/acceleratorLogo/cdl.png" height="300px">
 				  <img src="assets/acceleratorLogo/next36.png" height="300px">
-				  <img src="assets/acceleratorLogo/fc.png" height="300px">
+				  <img src="assets/acceleratorLogo/fc.png" height="300px"> -->
 				  <!--<img src="assets/acceleratorLogo/cvn.png" height="300px">-->
-				  <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
-				</div>
+				  <!-- <img src="./assets/acceleratorLogo/nextai.png" height="300px">		
+				</div> -->
 			</div>
 			<span class="greyBoxText" style="font-size: 13px">*coming soon</span>
 		</div>
