Added placeholder text

--- a/index.html
+++ b/index.html
@@ -160,6 +160,22 @@
 		<div class="greyBoxText">The Moonarch community comprises executives from leading tech companies and startups in North America</div>
 	</div>
 	<div class="container">
+		<div class="greyBoxTitle">P1</div>
+		<div class="greyBoxText">The Moonarch community represents a vibrant ecosystem of innovation, where executives from leading tech companies and startups across North America come together to share insights, strategies, and resources. Our network serves as a vital conduit between groundbreaking startups and seasoned investors, fostering growth and propelling the tech industry forward. By leveraging the collective expertise and experience of our members, we aim to create unparalleled opportunities for collaboration and success.</div>
+	</div>
+	<div class="container">
+		<div class="greyBoxTitle">P2</div>
+		<div class="greyBoxText">In the heart of this community, startups find not just financial backing but also mentorship and guidance from industry veterans who have navigated the challenges of scaling and innovation. This unique blend of support equips our startups with the tools they need to thrive in a competitive landscape. Moonarch is committed to nurturing these companies, offering them a platform to showcase their innovations to a curated audience of investors ready to invest in the next big idea.</div>
+	</div>
+	<div class="container">
+		<div class="greyBoxTitle">P3</div>
+		<div class="greyBoxText">For investors, Moonarch presents an exclusive opportunity to tap into a pool of meticulously vetted startups. Each company within our network is selected for its potential to disrupt the market and drive technological advancement. Investors gain access to a diverse portfolio of investment opportunities, along with detailed insights and analyses to inform their decisions. Our aim is to bridge the gap between visionary investors and innovative startups, creating a symbiotic relationship that benefits the entire tech ecosystem.</div>
+	</div>
+	<div class="container">
+		<div class="greyBoxTitle">P4</div>
+		<div class="greyBoxText">As we look to the future, Moonarch remains dedicated to expanding its reach and impact within the tech industry. Our goal is to foster a culture of innovation and entrepreneurship that transcends borders, connecting North American tech leaders with global opportunities. Through collaboration, investment, and shared vision, we are not just predicting the future of technology; we are actively shaping it. Join us on this journey and be a part of the next chapter in tech innovation.</div>
+	</div>
+	<div class="container">
 		<div class="greyBoxTitle">Updates</div>
 		<div class="greyBoxText">bunch of links?</div>
 	</div>
