Formatted Updates Section

--- a/index.html
+++ b/index.html
@@ -175,10 +175,44 @@
 		<div class="greyBoxTitle">P4</div>
 		<div class="greyBoxText">As we look to the future, Moonarch remains dedicated to expanding its reach and impact within the tech industry. Our goal is to foster a culture of innovation and entrepreneurship that transcends borders, connecting North American tech leaders with global opportunities. Through collaboration, investment, and shared vision, we are not just predicting the future of technology; we are actively shaping it. Join us on this journey and be a part of the next chapter in tech innovation.</div>
 	</div>
-	<div class="container">
-		<div class="greyBoxTitle">Updates</div>
-		<div class="greyBoxText">bunch of links?</div>
-	</div>
+	<div class="container mt-4">
+		<div class="greyBoxTitle mb-3">Latest Updates</div>
+		<div class="row">
+			<!-- Update 1 -->
+			<div class="col-md-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="./assets//img1.png" alt="Update 1 Image">
+					<div class="card-body d-flex flex-column">
+						<h5 class="card-title">Empowering AI Founders</h5>
+						<p class="card-text flex-grow-1">Introducing Defined to empower founders shaping the AI frontier.</p>
+						<a href="https://medium.com/@definedvc/introducing-defined-to-empower-founders-shap-ing-the-ai-frontier-78e4fb3baaa2" class="stretched-link"></a>
+					</div>
+				</div>
+			</div>
+			<!-- Update 2 -->
+			<div class="col-md-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="./assets//img2.png" alt="Update 2 Image">
+					<div class="card-body d-flex flex-column">
+						<h5 class="card-title">Monzo's Valuation Surge</h5>
+						<p class="card-text flex-grow-1">Monzo hits a 5bn valuation - A guide to what's driving the fintech's success.</p>
+						<a href="https://thevccorner.substack.com/p/monzo-hits-5bn-valuation-a-guide" class="stretched-link"></a>
+					</div>
+				</div>
+			</div>
+			<!-- Update 3 -->
+			<div class="col-md-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="./assets//img3.png" alt="Update 3 Image">
+					<div class="card-body d-flex flex-column">
+						<h5 class="card-title">Technology Breakthroughs</h5>
+						<p class="card-text flex-grow-1">Latest breakthroughs in technology that are setting new paradigms.</p>
+						<a href="https://www.bbc.com/news/technology-68368439" class="stretched-link"></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>	
 	<!-- <div class="networkSticky">
 		<div class="stickyBox" style="height: fit-content">
 			<div class="greyBoxTitle">Our Ecosystem</div>
