--- a/founders.html
+++ b/founders.html
@@ -58,13 +58,12 @@
 	</div>
 	<!-- d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none -->
 
-	<!-- Merged the three sets of buttons into a single parent container with the class "phoneMainButton". -->
-	<div class="header">
+  	<div class="header">
 		<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center headerPhone">
 			<div class="col-md-6 mx-auto">
 				<!-- <img src="./assets/icon/newLogoBlue.png" height="50" width="60" style="margin-bottom: 30px"/> -->
-			  <h1 class="display-3 mb-3 fw-bold phoneTitle">Your time is <span class="textunderline">valuable</span>, stop wasting it on finding startups</h1>
-			  <h3 class="fw-normal text-muted mb-3 phoneTitle">Find startups fast</h4>
+			  <h1 class="display-3 mb-3 fw-bold phoneTitle">Your time is <span class="textunderline">valuable</span>, stop wasting it on finding investors</h1>
+			  <h3 class="fw-normal text-muted mb-3 phoneTitle">Raise your round in one click</h4>
 			  <div class="d-flex gap-3 lead fw-normal phoneMainButton">
 				<a class="icon-link" href="https://moonarch.vc/form/wuzEnzz0nsNZnlw440EX/1ncKSwvRODHpBhzOPxfs" target="_blank" style="color: #721CFF; text-decoration: none;">
 					<button type="button" class="blueButtonOuter">
@@ -79,14 +78,172 @@
 		</div>
 	</div>
 
-	<div class="container">
-		<div class="greyBoxTitle">About Us</div>
-		<div class="greyBoxText">The Moonarch community comprises executives from leading tech companies and startups in North America</div>
+	<div class="" style="padding: 50px">
+		<div class="greyBoxTitle">How Moonarch does venture:</div>
+		<div class="stepCol">
+			<div class="stepRow stepRowOne">
+				<div class="stepBox firstStep">
+					<div class="updateTag">STEP ONE</div>
+					<div class="statIcon" style="margin-bottom: 20px;">
+						<svg xmlns="http://www.w3.org/2000/svg" height="50" viewBox="0 -960 960 960" width="50"><path d="M380-866v-28h200v28H380Zm86 446h28v-200h-28v200Zm14 288q-64 0-120-24t-98-66q-42-42-66-98t-24-120q0-64 24-120t66-98q42-42 98-66t120-24q57 0 110.5 21t97.5 59l40-40 20 20-40 40q38 44 59 97.5T788-440q0 64-24 120t-66 98q-42 42-98 66t-120 24Zm0-28q116 0 198-82t82-198q0-116-82-198t-198-82q-116 0-198 82t-82 198q0 116 82 198t198 82Zm0-280Z"/></svg>
+					</div>
+					<div class="stepContent">
+						<div class="stepText">Fill out a 3 minute form</div>
+						<div class="whiteButtonOuter" style="margin-top: 10px;">
+							<div class="whiteButtonInner" style="background: #ee7752">
+								<span>Apply now</span>
+								<svg class="arrowExternal" xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30" fill="white"><path d="M665.078-450.001H210.001q-12.769 0-21.384-8.615-8.616-8.615-8.616-21.384t8.616-21.384q8.615-8.615 21.384-8.615h455.077l-206.77-206.77q-8.923-8.923-8.807-20.884.115-11.962 9.423-21.269 9.307-8.692 21.076-9 11.769-.308 21.076 9l253.615 253.615q5.615 5.615 7.923 11.846 2.308 6.23 2.308 13.461t-2.308 13.461q-2.308 6.231-7.923 11.846L501.076-201.078q-8.307 8.308-20.576 8.5-12.269.192-21.576-8.5-9.308-9.307-9.308-21.384t9.308-21.384l206.154-206.155Z"/></svg>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="stepRow stepRowTwo">
+				<!-- <div class="stopGap"></div> -->
+				<div class="stepBox secondStep">
+					<div class="updateTag">STEP TWO</div>
+					<div class="statIcon" style="margin-bottom: 20px;">
+						<svg xmlns="http://www.w3.org/2000/svg" height="50" viewBox="0 -960 960 960" width="50"><path d="M380-866v-28h200v28H380Zm86 446h28v-200h-28v200Zm14 288q-64 0-120-24t-98-66q-42-42-66-98t-24-120q0-64 24-120t66-98q42-42 98-66t120-24q57 0 110.5 21t97.5 59l40-40 20 20-40 40q38 44 59 97.5T788-440q0 64-24 120t-66 98q-42 42-98 66t-120 24Zm0-28q116 0 198-82t82-198q0-116-82-198t-198-82q-116 0-198 82t-82 198q0 116 82 198t198 82Zm0-280Z"/></svg>
+					</div>
+					<div class="stepContent">
+						<div class="stepTitle">100+</div>
+						<div class="stepText">Investors and advisors from all around the world will view your application and reach out when interested</div>
+					</div>
+				</div>
+			</div>
+			<!-- <div class="stepRow stepRowThree">
+				<div class="stepBox thirdStep">
+					<div class="updateTag">STEP THREE</div>
+					<div class="statIcon" style="margin-bottom: 20px;">
+						<svg xmlns="http://www.w3.org/2000/svg" height="50" viewBox="0 -960 960 960" width="50"><path d="M380-866v-28h200v28H380Zm86 446h28v-200h-28v200Zm14 288q-64 0-120-24t-98-66q-42-42-66-98t-24-120q0-64 24-120t66-98q42-42 98-66t120-24q57 0 110.5 21t97.5 59l40-40 20 20-40 40q38 44 59 97.5T788-440q0 64-24 120t-66 98q-42 42-98 66t-120 24Zm0-28q116 0 198-82t82-198q0-116-82-198t-198-82q-116 0-198 82t-82 198q0 116 82 198t198 82Zm0-280Z"/></svg>
+					</div>
+					<div class="stepContent">
+						<div class="stepText">Get warm introductions to our network</div>
+					</div>
+				</div>
+				<div class="stopGap"></div>
+			</div> -->
+			<div class="stepRow stepRowFour">
+				<div class="stepBox fourthStep">
+					<div class="updateTag">STEP THREE</div>
+					<div class="statIcon" style="margin-bottom: 20px;">
+						<svg xmlns="http://www.w3.org/2000/svg" height="50" viewBox="0 -960 960 960" width="50"><path d="M380-866v-28h200v28H380Zm86 446h28v-200h-28v200Zm14 288q-64 0-120-24t-98-66q-42-42-66-98t-24-120q0-64 24-120t66-98q42-42 98-66t120-24q57 0 110.5 21t97.5 59l40-40 20 20-40 40q38 44 59 97.5T788-440q0 64-24 120t-66 98q-42 42-98 66t-120 24Zm0-28q116 0 198-82t82-198q0-116-82-198t-198-82q-116 0-198 82t-82 198q0 116 82 198t198 82Zm0-280Z"/></svg>
+					</div>
+					<div class="stepContent">
+						<div class="stepText">Moonarch invests</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="container">
-		<div class="greyBoxTitle">Updates</div>
-		<div class="greyBoxText">bunch of links?</div>
+
+    <div class="overflow-hidden p-3 p-md-5 m-md-3 blueBox">
+		<div class="greyBoxTitle" style="color: white">Join our community today</div>
+		<div class="whiteButtonOuter" style="margin-top: 10px; width: 300px">
+			<div class="whiteButtonInner" style="background: var(--moonBlack)">
+				<span>Apply now</span>
+				<svg class="arrowExternal" xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30" fill="white"><path d="M665.078-450.001H210.001q-12.769 0-21.384-8.615-8.616-8.615-8.616-21.384t8.616-21.384q8.615-8.615 21.384-8.615h455.077l-206.77-206.77q-8.923-8.923-8.807-20.884.115-11.962 9.423-21.269 9.307-8.692 21.076-9 11.769-.308 21.076 9l253.615 253.615q5.615 5.615 7.923 11.846 2.308 6.23 2.308 13.461t-2.308 13.461q-2.308 6.231-7.923 11.846L501.076-201.078q-8.307 8.308-20.576 8.5-12.269.192-21.576-8.5-9.308-9.307-9.308-21.384t9.308-21.384l206.154-206.155Z"/></svg>
+			</div>
+		</div>
+		</a>
 	</div>
+
+	<div class="container" style="margin-top: 50px">
+		<div class="greyBoxTitle">Our community comes from:</div>
+		<div class="industryCol">
+			<div class="industryRow">
+				<div class="updateTag" style="margin-bottom: 5px;">FINANCE</div>
+				<div class="industryLogos">
+					<div class="logoOutline">
+						<img src="./assets//investors//wealthsimple.png" class="logoImg">
+						<img src="./assets//investors//wealthsimple.png" class="logoImg1">
+						<img src="./assets//investors//wealthsimple.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//amazon.png" class="logoImg">
+						<img src="./assets//investors//amazon.png" class="logoImg1">
+						<img src="./assets//investors//amazon.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//clearco.png" class="logoImg">
+						<img src="./assets//investors//clearco.png" class="logoImg1">
+						<img src="./assets//investors//clearco.png" class="logImgHover">
+					</div>
+				</div>
+			</div>
+			<div class="industryRow">
+				<div class="updateTag" style="margin-bottom: 5px;">TECH</div>
+				<div class="industryLogos">
+					<div class="logoOutline">
+						<img src="./assets//investors//scale.png" class="logoImg">
+						<img src="./assets//investors//scale.png" class="logoImg1">
+						<img src="./assets//investors//scale.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//superhuman.png" class="logoImg">
+						<img src="./assets//investors//superhuman.png" class="logoImg1">
+						<img src="./assets//investors//superhuman.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//hopper.png" class="logoImg">
+						<img src="./assets//investors//hopper.png" class="logoImg1">
+						<img src="./assets//investors//hopper.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//dialogue.png" class="logoImg">
+						<img src="./assets//investors//dialogue.png" class="logoImg1">
+						<img src="./assets//investors//dialogue.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//stanford.png" class="logoImg">
+						<img src="./assets//investors//stanford.png" class="logoImg1">
+						<img src="./assets//investors//stanford.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//goldmansachs.png" class="logoImg">
+						<img src="./assets//investors//goldmansachs.png" class="logoImg1">
+						<img src="./assets//investors//goldmansachs.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//jpmorgan.png" class="logoImg">
+						<img src="./assets//investors//jpmorgan.png" class="logoImg1">
+						<img src="./assets//investors//jpmorgan.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//samsung.png" class="logoImg">
+						<img src="./assets//investors//samsung.png" class="logoImg1">
+						<img src="./assets//investors//samsung.png" class="logImgHover">
+					</div>
+				</div>
+			</div>
+			<div class="industryRow">
+				<div class="updateTag" style="margin-bottom: 5px;">LAW</div>
+				<div class="industryLogos">
+					<div class="logoOutline">
+						<img src="./assets//investors//deloitte.png" class="logoImg">
+						<img src="./assets//investors//deloitte.png" class="logoImg1">
+						<img src="./assets//investors//deloitte.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//microsoft.png" class="logoImg">
+						<img src="./assets//investors//microsoft.png" class="logoImg1">
+						<img src="./assets//investors//microsoft.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//google.png" class="logoImg">
+						<img src="./assets//investors//google.png" class="logoImg1">
+						<img src="./assets//investors//google.png" class="logImgHover">
+					</div>
+					<div class="logoOutline">
+						<img src="./assets//investors//coinbase.png" class="logoImg">
+						<img src="./assets//investors//coinbase.png" class="logoImg1">
+						<img src="./assets//investors//coinbase.png" class="logImgHover">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="container">
 		<div class="greyBoxTitle">FAQ</div>
 
