switched hopper for kkr

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				<div class="smallTitle">Stages</div>
 				<div class="flex-row">
 					<div class="boxedText">Pre-Seed</div>
-					<div class="boxedText">Seed</div>			 -->
+					<div class="boxedText">Seed</div>
 					<div class="boxedText">Series A</div>
 				</div>
 			</div>
@@ -228,9 +228,9 @@
 				<img src="./assets//investors//superhuman.png" class="logImgHover">
 			</div>
 			<div class="logoOutline">
-				<img src="./assets//investors//hopper.png" class="logoImg">
-				<img src="./assets//investors//hopper.png" class="logoImg1">
-				<img src="./assets//investors//hopper.png" class="logImgHover">
+				<img src="./assets//investors//kkr.png" class="logoImg">
+				<img src="./assets//investors//kkr.png" class="logoImg1">
+				<img src="./assets//investors//kkr.png" class="logImgHover">
 			</div>
 			<div class="logoOutline">
 				<img src="./assets//investors//dialogue.png" class="logoImg">
