--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 				<div class="d-flex" style="width: 100%; align-items: flex-start;">of venture funds underperform the S&P 500</div>
 			</div>
 		</div>
-		<a class="icon-link" href="https://calendly.com/moonarch/moonarch-investor-meeting" target="_blank" style="color: #721CFF; text-decoration: none; margin: auto; margin-top: 50px; margin-bottom: 0">
+		<a class="icon-link" href="https://calendly.com/inayat-j73r/30min" target="_blank" style="color: #721CFF; text-decoration: none; margin: auto; margin-top: 50px; margin-bottom: 0">
 			<button type="button" class="blueButtonOuter" style="width: 300px">
 				<span class="blueButtonInner">
 					<span style="margin-left: 3px">Looking to invest? Contact us</span>
