--- a/index.html
+++ b/index.html
@@ -27,11 +27,26 @@
 		<!-- <div href="https://moonarch.io/">
 			<img src="./assets/MoonarchLogo.png" alt="Moonarch" id="logo">
 		</div> -->
-		<div class="mainTitle">Building the tech to make innovation predictable</div>
-		<div class="turnstyleBtn" style="margin-top: 20px">
-			<div class="turnstyleTxt">Book Meeting </div>
-			<!-- <div class="turnstyleTxt">Book Meeting</div> -->
-		</div>
+		<div class="mainTitle mainTitleFixed">Making innovation predictable</div>
+		<a class="turnstyleBtn" style="margin-top: 20px" href="https://calendly.com/inayatirfan/30min" target="_blank">
+			<div class="turnstyleItem">
+				<div class="turnstyleTxt">
+					BOOK MEETING
+					<!-- <svg xmlns="http://www.w3.org/2000/svg" style="margin-left: 10px" height="35px" viewBox="0 -960 960 960" width="35px" fill="white"><path d="M682.92-460H220q-8.54 0-14.27-5.73T200-480q0-8.54 5.73-14.27T220-500h462.92L533.54-649.38q-5.85-5.85-6.12-13.77-.27-7.93 6.12-14.54 6.61-6.62 14.27-6.73 7.65-.12 14.27 6.5l175.3 175.3q5.24 5.24 7.35 10.7 2.12 5.46 2.12 11.92t-2.12 11.92q-2.11 5.46-7.35 10.7l-175.3 175.3q-5.85 5.85-13.89 6.12-8.04.27-14.65-6.35-6.39-6.61-6.5-14.15-.12-7.54 6.5-14.16L682.92-460Z"/></svg> -->
+				</div>
+				<div class="turnstyleTxt">
+					BOOK MEETING
+					<!-- <svg xmlns="http://www.w3.org/2000/svg" style="margin-left: 10px" height="35px" viewBox="0 -960 960 960" width="35px" fill="white"><path d="M682.92-460H220q-8.54 0-14.27-5.73T200-480q0-8.54 5.73-14.27T220-500h462.92L533.54-649.38q-5.85-5.85-6.12-13.77-.27-7.93 6.12-14.54 6.61-6.62 14.27-6.73 7.65-.12 14.27 6.5l175.3 175.3q5.24 5.24 7.35 10.7 2.12 5.46 2.12 11.92t-2.12 11.92q-2.11 5.46-7.35 10.7l-175.3 175.3q-5.85 5.85-13.89 6.12-8.04.27-14.65-6.35-6.39-6.61-6.5-14.15-.12-7.54 6.5-14.16L682.92-460Z"/></svg> -->
+				</div>
+			</div>
+			<!-- <div class="turnstyleSwipe"></div> -->
+			 <div class="turnstyleArrow">
+				<div class="arrowLine"></div>
+				<div class="arrowHead topArrow"></div>
+				<div class="arrowHead bottomArrow"></div>
+			 </div>
+			<!-- <svg xmlns="http://www.w3.org/2000/svg" style="margin-left: 10px" height="35px" viewBox="0 -960 960 960" width="35px" fill="white"><path d="M682.92-460H220q-8.54 0-14.27-5.73T200-480q0-8.54 5.73-14.27T220-500h462.92L533.54-649.38q-5.85-5.85-6.12-13.77-.27-7.93 6.12-14.54 6.61-6.62 14.27-6.73 7.65-.12 14.27 6.5l175.3 175.3q5.24 5.24 7.35 10.7 2.12 5.46 2.12 11.92t-2.12 11.92q-2.11 5.46-7.35 10.7l-175.3 175.3q-5.85 5.85-13.89 6.12-8.04.27-14.65-6.35-6.39-6.61-6.5-14.15-.12-7.54 6.5-14.16L682.92-460Z"/></svg> -->
+			</a>
 	</div>
 	<div class="nav topNav">
 		<a href="https://moonarch.io/">
