--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="./index.js"></script>
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Moonarch | Fund your startup</title>
+	<title>Moonarch | Making innovation predictable</title>
 	<link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
 </head>
 <!-- Google tag (gtag.js) -->
